--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.firebaseui:firebase-ui-database:4.2.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
 }
